--- a/src/main/resources/fxml/login.fxml
+++ b/src/main/resources/fxml/login.fxml
@@ -1,14 +1,22 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Hyperlink?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="$CONTROLLER_NAME$"
-            prefHeight="400.0" prefWidth="600.0" >
-
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="felosy.controllers.LoginController">
+    <Label id="form_label" alignment="CENTER" layoutX="249.0" layoutY="37.0" prefHeight="40.0" prefWidth="102.0" text="Login">
+        <font>
+          <Font size="28.0" />
+        </font>
+    </Label>
+    <TextField id="username_field" fx:id="username_field" layoutX="235.0" layoutY="114.0" promptText="Enter your username" />
+    <TextField id="password_field" fx:id="password_field" accessibleRole="PASSWORD_FIELD" layoutX="236.0" layoutY="187.0" promptText="Enter your password" />
+    <Label id="username_label" layoutX="235.0" layoutY="97.0" text="Username" />
+    <Label id="password_label" layoutX="236.0" layoutY="169.0" text="Password" />
+    <Hyperlink id="register_btn" fx:id="signup_btn" layoutX="221.0" layoutY="299.0" onAction="#switchToSignUp" text="Don't have an Account? Register" />
+    <Button id="login_btn" fx:id="login_btn" layoutX="287.0" layoutY="243.0" mnemonicParsing="false" text="Login" />
 </AnchorPane>
