--- a/src/main/resources/fxml/index.fxml
+++ b/src/main/resources/fxml/index.fxml
@@ -1,22 +1,34 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="felosy.controllers.IndexController"
-            prefHeight="400.0" prefWidth="600.0" >
-    <Label id="form_label" alignment="CENTER" layoutX="122.0" layoutY="63.0" prefHeight="85.0" prefWidth="357.0" text="Welcome to Felosy!">
-        <font>
-            <Font size="36.0" />
-        </font>
-    </Label>
-    <Button id="login_btn" fx:id="login_btn" alignment="CENTER" layoutX="252.0" layoutY="174.0" mnemonicParsing="false" onAction="#switchToLogin" prefHeight="25.0" prefWidth="97.0" text="Login" />
-    <Button id="signup_btn" fx:id="signup_btn" alignment="CENTER" layoutX="252.0" layoutY="229.0" mnemonicParsing="false" onAction="#switchToSignUp" prefHeight="25.0" prefWidth="97.0" text="Sign up" />
-    <Button id="about_btn" fx:id="about_btn" alignment="CENTER" layoutX="252.0" layoutY="284.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="97.0" text="About" />
+
+<AnchorPane styleClass="main-container" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="felosy.controllers.AuthController">
+
+    <StackPane AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+        <VBox alignment="CENTER" prefHeight="400.0" prefWidth="600.0" spacing="30">
+            <padding>
+                <Insets bottom="20" left="20" right="20" top="20" />
+            </padding>
+
+            <Label id="form_label" alignment="CENTER" styleClass="title-label" text="Welcome to Felosy!">
+                <font>
+                    <Font size="36.0" />
+                </font>
+            </Label>
+
+            <VBox alignment="CENTER" spacing="20">
+                <Button id="login_btn" fx:id="login_btn" mnemonicParsing="false" onAction="#switchToLogin" prefWidth="180" styleClass="action-button" text="Login" />
+
+                <Button id="signup_btn" fx:id="signup_btn" mnemonicParsing="false" onAction="#switchToSignUp" prefWidth="180" styleClass="action-button" text="Sign up" />
+
+                <Button id="about_btn" fx:id="about_btn" mnemonicParsing="false" prefWidth="180" styleClass="action-button" text="About" />
+            </VBox>
+        </VBox>
+    </StackPane>
 </AnchorPane>
