--- a/src/main/resources/fxml/login.fxml
+++ b/src/main/resources/fxml/login.fxml
@@ -1,22 +1,54 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Hyperlink?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="felosy.controllers.LoginController">
-    <Label id="form_label" alignment="CENTER" layoutX="249.0" layoutY="37.0" prefHeight="40.0" prefWidth="102.0" text="Login">
-        <font>
-          <Font size="28.0" />
-        </font>
-    </Label>
-    <TextField id="username_field" fx:id="username_field" layoutX="235.0" layoutY="114.0" promptText="Enter your username" />
-    <TextField id="password_field" fx:id="password_field" accessibleRole="PASSWORD_FIELD" layoutX="236.0" layoutY="187.0" promptText="Enter your password" />
-    <Label id="username_label" layoutX="235.0" layoutY="97.0" text="Username" />
-    <Label id="password_label" layoutX="236.0" layoutY="169.0" text="Password" />
-    <Hyperlink id="register_btn" fx:id="signup_btn" layoutX="221.0" layoutY="299.0" onAction="#switchToSignUp" text="Don't have an Account? Register" />
-    <Button id="login_btn" fx:id="login_btn" layoutX="287.0" layoutY="243.0" mnemonicParsing="false" text="Login" />
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="felosy.controllers.AuthController">
+    <StackPane AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+        <Button fx:id="return_btn" mnemonicParsing="false" onAction="#switchToIndex" text="Return" StackPane.alignment="TOP_LEFT">
+            <StackPane.margin>
+                <Insets left="20.0" top="20.0" />
+            </StackPane.margin>
+        </Button>
+
+        <VBox alignment="CENTER" maxWidth="250.0" spacing="20.0">
+            <padding>
+                <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
+            </padding>
+
+            <Label id="form_label" alignment="CENTER" text="Login" VBox.vgrow="NEVER">
+                <font>
+                    <Font size="36.0" />
+                </font>
+                <VBox.margin>
+                    <Insets bottom="20.0" />
+                </VBox.margin>
+            </Label>
+
+            <VBox spacing="5.0">
+                <Label id="username_label" text="Username" />
+                <TextField id="username_field" fx:id="username_field" promptText="Enter your username" />
+            </VBox>
+
+            <VBox spacing="5.0">
+                <Label id="password_label" text="Password" />
+                <TextField id="password_field" fx:id="password_field" accessibleRole="PASSWORD_FIELD" promptText="Enter your password" />
+            </VBox>
+
+            <Button id="login_btn" fx:id="login_btn" mnemonicParsing="false" text="Login">
+                <VBox.margin>
+                    <Insets top="10.0" />
+                </VBox.margin>
+            </Button>
+
+            <Hyperlink id="register_btn" fx:id="signup_btn" onAction="#switchToSignUp" text="Don't have an Account? Register" />
+        </VBox>
+    </StackPane>
 </AnchorPane>
