--- a/src/main/resources/fxml/login.fxml
+++ b/src/main/resources/fxml/login.fxml
@@ -4,6 +4,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Hyperlink?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.StackPane?>
@@ -34,15 +35,17 @@
 
             <VBox spacing="5.0">
                 <Label id="username_label" text="Username" />
-                <TextField id="username_field" fx:id="username_field" promptText="Enter your username" />
+                <TextField id="username_field" fx:id="login_username_field" promptText="Enter your username" />
+            <Label fx:id="login_username_error" prefHeight="18.0" prefWidth="214.0" textFill="RED" />
             </VBox>
 
             <VBox spacing="5.0">
                 <Label id="password_label" text="Password" />
-                <TextField id="password_field" fx:id="password_field" accessibleRole="PASSWORD_FIELD" promptText="Enter your password" />
+                <PasswordField id="password_field" fx:id="login_password_field" promptText="Enter your password" />
+                <Label fx:id="login_password_error" prefHeight="18.0" prefWidth="324.0" textFill="RED" />
             </VBox>
 
-            <Button id="login_btn" fx:id="login_btn" mnemonicParsing="false" text="Login">
+            <Button id="login_btn" fx:id="login_btn" mnemonicParsing="false" onAction="#handleLogin" text="Login">
                 <VBox.margin>
                     <Insets top="10.0" />
                 </VBox.margin>
