--- a/src/main/resources/fxml/signup.fxml
+++ b/src/main/resources/fxml/signup.fxml
@@ -1,26 +1,73 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Hyperlink?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="felosy.controllers.AuthController">
-    <Label id="form_label" alignment="CENTER" layoutX="119.0" prefHeight="70.0" prefWidth="361.0" text="Create an Account">
-        <font>
-            <Font size="28.0" />
-        </font>
-    </Label>
-    <TextField id="username_field" fx:id="username_field" layoutX="225.0" layoutY="88.0" promptText="Enter your username" />
-    <TextField id="password_field" fx:id="password_field" accessibleRole="PASSWORD_FIELD" layoutX="225.0" layoutY="196.0" promptText="Enter your password" />
-    <TextField id="confirmPass_field" fx:id="confirmPass_field" accessibleRole="PASSWORD_FIELD" layoutX="225.0" layoutY="257.0" promptText="Confirm your password" />
-    <TextField id="email_field" fx:id="email_field" layoutX="225.0" layoutY="140.0" promptText="Enter your email address" />
-    <Label id="username_label" layoutX="225.0" layoutY="70.0" text="Username" />
-    <Label id="password_label" layoutX="226.0" layoutY="178.0" text="Password" />
-    <Label id="confirmPass_label" layoutX="225.0" layoutY="239.0" text="Confirm Password" />
-    <Label id="email_label" layoutX="226.0" layoutY="122.0" text="Email" />
-    <Button id="signup_btn" fx:id="signup_btn" layoutX="270.0" layoutY="299.0" mnemonicParsing="false" text="Sign Up" />
-    <Hyperlink id="login_btn" fx:id="login_btn" layoutX="211.0" layoutY="350.0" onAction="#switchToLogin" text="Already have an account? Login" />
+<AnchorPane prefHeight="464.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="felosy.controllers.AuthController">
+    <StackPane AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+        <Button fx:id="return_btn" mnemonicParsing="false" onAction="#switchToIndex" text="Return" StackPane.alignment="TOP_LEFT">
+            <StackPane.margin>
+                <Insets left="20.0" top="20.0" />
+            </StackPane.margin>
+        </Button>
+        
+        <VBox alignment="CENTER" maxWidth="350.0" spacing="10.0">
+            <padding>
+                <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
+            </padding>
+            
+            <Label id="form_label" alignment="CENTER" text="Create an Account" VBox.vgrow="NEVER">
+                <font>
+                    <Font size="28.0" />
+                </font>
+                <VBox.margin>
+                    <Insets bottom="20.0" />
+                </VBox.margin>
+            </Label>
+            
+            <VBox spacing="5.0">
+                <Label id="username_label" text="Username" />
+                <TextField id="username_field" fx:id="signup_username_field" promptText="Enter your username" />
+                <Label fx:id="signup_username_error" prefHeight="18.0" prefWidth="151.0" textFill="RED" />
+            </VBox>
+            
+            <VBox spacing="5.0">
+                <Label id="email_label" text="Email" />
+                <TextField id="email_field" fx:id="signup_email_field" promptText="Enter your email address" />
+                <Label fx:id="signup_email_error" prefHeight="18.0" prefWidth="151.0" textFill="RED" />
+            </VBox>
+            
+            <VBox spacing="5.0">
+                <Label id="password_label" text="Password" />
+                <PasswordField id="password_field" fx:id="signup_password_field" promptText="Enter your password" />
+                <Label fx:id="signup_password_error" prefHeight="18.0" prefWidth="151.0" textFill="RED" />
+            </VBox>
+            
+            <VBox spacing="5.0">
+                <Label id="confirmPass_label" text="Confirm Password" />
+                <PasswordField id="confirmPass_field" fx:id="signup_confirmPass_field" promptText="Confirm your password" />
+                <Label fx:id="signup_confPass_error" prefHeight="18.0" prefWidth="151.0" textFill="RED" />
+            </VBox>
+            
+            <Button id="signup_btn" fx:id="signup_btn" mnemonicParsing="false" onAction="#handleSignup" prefHeight="40.0" prefWidth="180.0" text="Sign Up">
+                <VBox.margin>
+                    <Insets top="10.0" />
+                </VBox.margin>
+                <padding>
+                    <Insets bottom="5.0" left="10.0" right="10.0" top="5.0" />
+                </padding>
+            </Button>
+            
+            <Hyperlink id="login_btn" fx:id="login_btn" onAction="#switchToLogin" text="Already have an account? Login" />
+
+        </VBox>
+    </StackPane>
 </AnchorPane>
