--- a/src/main/resources/fxml/signup.fxml
+++ b/src/main/resources/fxml/signup.fxml
@@ -1,61 +1,39 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Hyperlink?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="felosy.controllers.AuthController">
-    <StackPane AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-        <VBox alignment="CENTER" maxWidth="355.0" spacing="15.0">
-            <padding>
-                <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
-            </padding>
-            <Label id="form_label" alignment="CENTER" text="Create an Account">
-                <font>
-                    <Font size="28.0" />
-                </font>
-                <VBox.margin>
-                    <Insets bottom="20.0" />
-                </VBox.margin>
-            </Label>
-            
-            <VBox maxWidth="300.0" minWidth="300.0" prefWidth="300.0" spacing="5.0">
-                <Label id="username_label" text="Username" />
-                <TextField id="signupUsernameField" fx:id="signupUsernameField" promptText="Enter your username" />
-            </VBox>
-            
-            <VBox maxWidth="300.0" minWidth="300.0" prefWidth="300.0" spacing="5.0">
-                <Label id="email_label" text="Email" />
-                <TextField id="emailField" fx:id="emailField" promptText="Enter your email address" />
-            </VBox>
-            
-            <VBox maxWidth="300.0" minWidth="300.0" prefWidth="300.0" spacing="5.0">
-                <Label id="password_label" text="Password" />
-                <PasswordField id="signupPasswordField" fx:id="signupPasswordField" accessibleRole="PASSWORD_FIELD" promptText="Enter your password" />
-            </VBox>
-            
-            <VBox maxWidth="300.0" minWidth="300.0" prefWidth="300.0" spacing="5.0">
-                <Label id="confirmPass_label" text="Confirm Password" />
-                <PasswordField id="confirmPasswordField" fx:id="confirmPasswordField" accessibleRole="PASSWORD_FIELD" promptText="Confirm your password" />
-            </VBox>
-            
-            <Text fill="RED" fx:id="signupErrorText" strokeType="OUTSIDE" strokeWidth="0.0" text="sign-up error" textAlignment="CENTER" visible="false" />
-            
-            <Button id="signupButton" fx:id="signupButton" mnemonicParsing="false" onAction="#handleSignup" prefWidth="150.0" text="Sign Up">
-                <VBox.margin>
-                    <Insets top="10.0" />
-                </VBox.margin>
-            </Button>
-            
-            <Hyperlink id="loginLink" fx:id="loginLink" onAction="#switchToLogin" text="Already have an account? Login" />
-        </VBox>
-    </StackPane>
+<AnchorPane prefHeight="450.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="felosy.controllers.AuthController">
+    <VBox alignment="CENTER" layoutX="150.0" layoutY="20.0" prefWidth="300.0" spacing="10.0">
+        <Label id="form_label" alignment="CENTER" prefHeight="70.0" prefWidth="300.0" text="Create an Account">
+            <font>
+                <Font size="28.0" />
+            </font>
+        </Label>
+
+        <Label id="username_label" alignment="CENTER_LEFT" prefWidth="300.0" text="Username" />
+        <TextField id="signupUsernameField" fx:id="signupUsernameField" prefWidth="300.0" promptText="Enter your username" />
+
+        <Label id="email_label" alignment="CENTER_LEFT" prefWidth="300.0" text="Email" />
+        <TextField id="emailField" fx:id="emailField" prefWidth="300.0" promptText="Enter your email address" />
+
+        <Label id="password_label" alignment="CENTER_LEFT" prefWidth="300.0" text="Password" />
+        <PasswordField id="signupPasswordField" fx:id="signupPasswordField" accessibleRole="PASSWORD_FIELD" prefWidth="300.0" promptText="Enter your password" />
+
+        <Label id="confirmPass_label" alignment="CENTER_LEFT" prefWidth="300.0" text="Confirm Password" />
+        <PasswordField id="confirmPasswordField" fx:id="confirmPasswordField" accessibleRole="PASSWORD_FIELD" prefWidth="300.0" promptText="Confirm your password" />
+
+        <Text fill="RED" fx:id="signupErrorText" textAlignment="CENTER" visible="false" />
+
+        <Button id="signupButton" fx:id="signupButton" mnemonicParsing="false" onAction="#handleSignup" prefWidth="150.0" text="Sign Up" />
+
+        <Hyperlink id="loginLink" fx:id="loginLink" onAction="#switchToLogin" text="Already have an account? Login" />
+    </VBox>
 </AnchorPane>
