--- a/src/main/resources/fxml/assets_management.fxml
+++ b/src/main/resources/fxml/assets_management.fxml
@@ -14,51 +14,76 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
+<?import javafx.scene.control.DatePicker?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="felosy.controllers.AssetsController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="felosy.controllers.AssetsController">
    <top>
       <VBox BorderPane.alignment="CENTER">
          <children>
             <Label text="Assets Management (Gold)">
                <font>
-                  <Font size="17.0" />
+                  <Font size="20.0" />
                </font>
                <VBox.margin>
-                  <Insets left="30.0" top="5.0" />
+                  <Insets bottom="10.0" left="30.0" top="15.0" />
                </VBox.margin>
             </Label>
-            <HBox>
+            <HBox alignment="CENTER_LEFT">
                <children>
-                  <RadioButton fx:id="radio_gold" mnemonicParsing="false" selected="true" text="Gold">
+                  <fx:define>
+                     <ToggleGroup fx:id="$assetTypeGroup" />
+                  </fx:define>
+                  <RadioButton fx:id="radio_gold" mnemonicParsing="false" onAction="#switchToGold" selected="true" text="Gold">
                      <HBox.margin>
-                        <Insets bottom="8.0" left="8.0" right="8.0" top="8.0" />
+                        <Insets bottom="8.0" left="30.0" right="15.0" top="8.0" />
                      </HBox.margin>
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                     <toggleGroup>
+                        <ToggleGroup fx:id="assetTypeGroup" />
+                     </toggleGroup>
                   </RadioButton>
-                  <RadioButton fx:id="radio_crypto" mnemonicParsing="false" text="Cryptocurrency">
+                  <RadioButton fx:id="radio_crypto" mnemonicParsing="false" onAction="#switchToCrypto" text="Cryptocurrency" toggleGroup="$assetTypeGroup">
                      <HBox.margin>
-                        <Insets bottom="8.0" left="8.0" right="8.0" top="8.0" />
+                        <Insets bottom="8.0" right="15.0" top="8.0" />
                      </HBox.margin>
+                     <font>
+                        <Font size="14.0" />
+                     </font>
                   </RadioButton>
-                  <RadioButton fx:id="radio_realEstate" mnemonicParsing="false" text="Real Estate">
+                  <RadioButton fx:id="radio_realEstate" mnemonicParsing="false" onAction="#switchToRealEstate" text="Real Estate" toggleGroup="$assetTypeGroup">
                      <HBox.margin>
-                        <Insets bottom="8.0" left="8.0" right="8.0" top="8.0" />
+                        <Insets bottom="8.0" right="15.0" top="8.0" />
                      </HBox.margin>
+                     <font>
+                        <Font size="14.0" />
+                     </font>
                   </RadioButton>
-                  <RadioButton fx:id="radio_Stock" mnemonicParsing="false" text="Stock">
+                  <RadioButton fx:id="radio_Stock" mnemonicParsing="false" onAction="#switchToStock" text="Stock" toggleGroup="$assetTypeGroup">
                      <HBox.margin>
-                        <Insets bottom="8.0" left="8.0" right="8.0" top="8.0" />
+                        <Insets bottom="8.0" right="15.0" top="8.0" />
                      </HBox.margin>
+                     <font>
+                        <Font size="14.0" />
+                     </font>
                   </RadioButton>
                   <Region HBox.hgrow="ALWAYS" />
-                  <Text fx:id="loginErrorText" fill="RED" strokeType="OUTSIDE" strokeWidth="0.0" text="Back Error" visible="false">
+                  <Text fx:id="errorText" fill="RED" strokeType="OUTSIDE" strokeWidth="0.0" text="Error" visible="false">
                      <HBox.margin>
-                        <Insets top="11.0" />
+                        <Insets right="15.0" top="8.0" />
                      </HBox.margin>
+                     <font>
+                        <Font size="14.0" />
+                     </font>
                   </Text>
                   <Button fx:id="btn_back" mnemonicParsing="false" onAction="#handleBack" text="Back to Main">
                      <HBox.margin>
-                        <Insets bottom="8.0" left="8.0" right="8.0" top="8.0" />
+                        <Insets bottom="8.0" right="30.0" top="8.0" />
                      </HBox.margin>
+                     <font>
+                        <Font size="14.0" />
+                     </font>
                   </Button>
                </children>
             </HBox>
@@ -66,56 +91,40 @@
       </VBox>
    </top>
    <center>
-      <TableView fx:id="goldTable" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+      <TableView fx:id="goldTable" VBox.vgrow="ALWAYS" BorderPane.alignment="CENTER">
          <columns>
-            <TableColumn fx:id="idColumn" prefWidth="138.4000244140625" text="ID" />
-            <TableColumn fx:id="nameColumn" prefWidth="117.5999755859375" text="Name" />
-            <TableColumn fx:id="gramsColumn" minWidth="3.20001220703125" prefWidth="61.60003662109375" text="Grams" />
-            <TableColumn fx:id="purityColumn" prefWidth="77.5999755859375" text="Purity Level" />
-            <TableColumn fx:id="priceColumn" prefWidth="96.0" text="Price" />
+            <TableColumn fx:id="idColumn" prefWidth="80.0" text="ID" />
+            <TableColumn fx:id="nameColumn" prefWidth="120.0" text="Name" />
+            <TableColumn fx:id="purchaseDateColumn" prefWidth="100.0" text="Purchase Date" />
+            <TableColumn fx:id="gramsColumn" prefWidth="80.0" text="Grams" />
+            <TableColumn fx:id="purityColumn" prefWidth="100.0" text="Purity Level" />
+            <TableColumn fx:id="purchasePriceColumn" prefWidth="100.0" text="Purchase Price" />
+            <TableColumn fx:id="priceColumn" prefWidth="100.0" text="Current Price" />
+            <TableColumn fx:id="actionsColumn" prefWidth="120.0" text="Actions" />
          </columns>
+         <BorderPane.margin>
+            <Insets bottom="10.0" left="15.0" right="15.0" top="10.0" />
+         </BorderPane.margin>
       </TableView>
    </center>
-   <right>
-      <VBox BorderPane.alignment="CENTER">
-         <children>
-            <Region prefHeight="60.0" prefWidth="13.0" />
-         </children>
-      </VBox>
-   </right>
    <bottom>
-      <VBox BorderPane.alignment="CENTER">
+      <VBox spacing="15.0" BorderPane.alignment="CENTER">
          <children>
-            <HBox>
+            <HBox alignment="CENTER" spacing="15.0">
                <children>
-                  <TextField fx:id="txt_name" prefHeight="26.0" prefWidth="100.0" promptText="Name">
-                     <HBox.margin>
-                        <Insets bottom="8.0" left="8.0" right="8.0" top="8.0" />
-                     </HBox.margin>
-                  </TextField>
-                  <TextField fx:id="txt_grams" prefHeight="26.0" prefWidth="58.0" promptText="Grams">
-                     <HBox.margin>
-                        <Insets bottom="8.0" left="8.0" right="8.0" top="8.0" />
-                     </HBox.margin>
-                  </TextField>
-                  <TextField fx:id="txt_purity" prefHeight="26.0" prefWidth="84.0" promptText="Purity (0-&gt;1)">
-                     <HBox.margin>
-                        <Insets bottom="8.0" left="8.0" right="8.0" top="8.0" />
-                     </HBox.margin>
-                  </TextField>
-                  <Button fx:id="btn_add" mnemonicParsing="false" text="add">
-                     <HBox.margin>
-                        <Insets right="8.0" top="8.0" />
-                     </HBox.margin>
-                  </Button>
-                  <Button fx:id="btn_delete" mnemonicParsing="false" text="delete">
-                     <HBox.margin>
-                        <Insets top="10.0" />
-                     </HBox.margin>
+                  <Button fx:id="btn_add" mnemonicParsing="false" prefHeight="30.0" text="Add New Gold Asset">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
                   </Button>
                </children>
+               <VBox.margin>
+                  <Insets />
+               </VBox.margin>
+               <padding>
+                  <Insets bottom="15.0" left="30.0" right="30.0" top="15.0" />
+               </padding>
             </HBox>
-            <HBox />
          </children>
       </VBox>
    </bottom>
