--- a/src/main/resources/fxml/crypto_management.fxml
+++ b/src/main/resources/fxml/crypto_management.fxml
@@ -2,12 +2,10 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
-<?import javafx.scene.control.TextField?>
 <?import javafx.scene.control.ToggleGroup?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
@@ -16,50 +14,71 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="felosy.controllers.CryptoController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="felosy.controllers.CryptoController">
     <top>
         <VBox BorderPane.alignment="CENTER">
             <children>
                 <Label text="Assets Management (Cryptocurrency)">
                     <font>
-                        <Font size="17.0" />
+                        <Font size="20.0" />
                     </font>
                     <VBox.margin>
-                        <Insets left="30.0" top="5.0" />
+                        <Insets bottom="10.0" left="30.0" top="15.0" />
                     </VBox.margin>
                 </Label>
-                <HBox>
+                <HBox alignment="CENTER_LEFT">
                     <children>
-                        <RadioButton fx:id="radio_gold" mnemonicParsing="false" text="Gold">
+                        <fx:define>
+                            <ToggleGroup fx:id="assetTypeGroup" />
+                        </fx:define>
+                        <RadioButton fx:id="radio_gold" mnemonicParsing="false" text="Gold" toggleGroup="$assetTypeGroup">
                             <HBox.margin>
-                                <Insets bottom="8.0" left="8.0" right="8.0" top="8.0" />
+                                <Insets bottom="8.0" left="30.0" right="15.0" top="8.0" />
                             </HBox.margin>
+                            <font>
+                                <Font size="14.0" />
+                            </font>
                         </RadioButton>
-                        <RadioButton fx:id="radio_crypto" mnemonicParsing="false" selected="true" text="Cryptocurrency">
+                        <RadioButton fx:id="radio_crypto" mnemonicParsing="false" selected="true" text="Cryptocurrency" toggleGroup="$assetTypeGroup">
                             <HBox.margin>
-                                <Insets bottom="8.0" left="8.0" right="8.0" top="8.0" />
+                                <Insets bottom="8.0" right="15.0" top="8.0" />
                             </HBox.margin>
+                            <font>
+                                <Font size="14.0" />
+                            </font>
                         </RadioButton>
-                        <RadioButton fx:id="radio_realEstate" mnemonicParsing="false" text="Real Estate">
+                        <RadioButton fx:id="radio_realEstate" mnemonicParsing="false" text="Real Estate" toggleGroup="$assetTypeGroup">
                             <HBox.margin>
-                                <Insets bottom="8.0" left="8.0" right="8.0" top="8.0" />
+                                <Insets bottom="8.0" right="15.0" top="8.0" />
                             </HBox.margin>
+                            <font>
+                                <Font size="14.0" />
+                            </font>
                         </RadioButton>
-                        <RadioButton fx:id="radio_Stock" mnemonicParsing="false" text="Stock">
+                        <RadioButton fx:id="radio_Stock" mnemonicParsing="false" text="Stock" toggleGroup="$assetTypeGroup">
                             <HBox.margin>
-                                <Insets bottom="8.0" left="8.0" right="8.0" top="8.0" />
+                                <Insets bottom="8.0" right="15.0" top="8.0" />
                             </HBox.margin>
+                            <font>
+                                <Font size="14.0" />
+                            </font>
                         </RadioButton>
                         <Region HBox.hgrow="ALWAYS" />
                         <Text fx:id="errorText" fill="RED" strokeType="OUTSIDE" strokeWidth="0.0" text="Error" visible="false">
                             <HBox.margin>
-                                <Insets top="11.0" />
+                                <Insets right="15.0" top="8.0" />
                             </HBox.margin>
+                            <font>
+                                <Font size="14.0" />
+                            </font>
                         </Text>
                         <Button fx:id="btn_back" mnemonicParsing="false" onAction="#handleBack" text="Back to Main">
                             <HBox.margin>
-                                <Insets bottom="8.0" left="8.0" right="8.0" top="8.0" />
+                                <Insets bottom="8.0" right="30.0" top="8.0" />
                             </HBox.margin>
+                            <font>
+                                <Font size="14.0" />
+                            </font>
                         </Button>
                     </children>
                 </HBox>
@@ -67,32 +86,35 @@
         </VBox>
     </top>
     <center>
-        <TableView fx:id="cryptoTable" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+        <TableView fx:id="cryptoTable" VBox.vgrow="ALWAYS" BorderPane.alignment="CENTER">
             <columns>
-                <TableColumn fx:id="idColumn" prefWidth="100.0" text="ID" />
-                <TableColumn fx:id="nameColumn" prefWidth="100.0" text="Name" />
+                <TableColumn fx:id="idColumn" prefWidth="80.0" text="ID" />
+                <TableColumn fx:id="nameColumn" prefWidth="120.0" text="Name" />
                 <TableColumn fx:id="coinTypeColumn" prefWidth="100.0" text="Coin Type" />
                 <TableColumn fx:id="amountColumn" prefWidth="100.0" text="Amount" />
-                <TableColumn fx:id="priceColumn" prefWidth="100.0" text="Price" />
+                <TableColumn fx:id="priceColumn" prefWidth="100.0" text="Current Price" />
+                <TableColumn fx:id="purchaseDateColumn" prefWidth="100.0" text="Purchase Date" />
+                <TableColumn fx:id="purchasePriceColumn" prefWidth="100.0" text="Purchase Price" />
+                <TableColumn fx:id="returnColumn" prefWidth="100.0" text="Return %" />
+                <TableColumn fx:id="actionsColumn" prefWidth="120.0" text="Actions" />
             </columns>
+            <BorderPane.margin>
+                <Insets bottom="10.0" left="15.0" right="15.0" top="10.0" />
+            </BorderPane.margin>
         </TableView>
     </center>
     <bottom>
-        <VBox spacing="10" BorderPane.alignment="CENTER">
+        <HBox alignment="CENTER" spacing="15.0" BorderPane.alignment="CENTER">
             <children>
-                <HBox spacing="10">
-                    <children>
-                        <TextField fx:id="txt_name" prefHeight="26.0" prefWidth="100.0" promptText="Name" />
-                        <ComboBox fx:id="coinTypeComboBox" prefWidth="100.0" promptText="Coin Type" />
-                        <TextField fx:id="txt_amount" prefHeight="26.0" prefWidth="100.0" promptText="Amount" />
-                        <Button fx:id="btn_add" mnemonicParsing="false" onAction="#handleAddCrypto" text="Add" />
-                        <Button fx:id="btn_delete" mnemonicParsing="false" onAction="#handleDeleteCrypto" text="Delete" />
-                    </children>
-                    <padding>
-                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-                    </padding>
-                </HBox>
+                <Button fx:id="btn_add" mnemonicParsing="false" onAction="#handleAddCrypto" prefHeight="30.0" text="Add Cryptocurrency">
+                    <font>
+                        <Font size="14.0" />
+                    </font>
+                </Button>
             </children>
-        </VBox>
+            <padding>
+                <Insets bottom="15.0" left="30.0" right="30.0" top="15.0" />
+            </padding>
+        </HBox>
     </bottom>
 </BorderPane>
